--- a/index.html
+++ b/index.html
@@ -1306,7 +1306,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2023 <span class="lang" key="footer-copyright">球员评分系统 - 所有权利保留</span></p>
+                <p>&copy; 2025 <span class="lang" key="footer-copyright">球员评分系统 - 所有权利保留</span></p>
             </div>
         </div>
     </footer>
@@ -1408,7 +1408,7 @@
                 'footer-about': '关于我们',
                 'footer-about-desc': '我们致力于通过技术创新解决体育评分领域长期存在的不公平问题，建立更加客观、全面、公正的球员评价体系。',
                 'footer-contact': '联系方式',
-                'footer-address': '北京市海淀区中关村南大街5号',
+                'footer-address': '重庆八中渝北校区高2027级14班',
                 'footer-follow': '关注我们',
                 'footer-weibo': '微博',
                 'footer-wechat': '微信',
