--- a/index.html
+++ b/index.html
@@ -1290,7 +1290,7 @@
                     <h3 class="lang" key="footer-contact">联系方式</h3>
                     <ul class="contact-info">
                         <li><i class="fas fa-map-marker-alt"></i> <span class="lang" key="footer-address">北京市海淀区中关村南大街5号</span></li>
-                        <li><i class="fas fa-phone"></i> +86 10 8888 8888</li>
+                        <li><i class="fas fa-phone"></i> +86 13629767186</li>
                         <li><i class="fas fa-envelope"></i> contact@playerratings.com</li>
                     </ul>
                 </div>
